update backend config, controllers, services and entities