@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 import java.security.Key;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class JwtUtils {
@@ -27,19 +26,18 @@ public class JwtUtils {
 
     // Génération du token AVEC ROLE
     public String generateToken(UserDetails userDetails) {
+
         List<String> roles = userDetails.getAuthorities()
                 .stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList(); // ✅ FIX S6204
 
-        // Récupérer l'utilisateur depuis le UserDetails custom
-        // On cast vers notre UserDetails custom (voir étape 2)
         String nom = "";
         String prenom = "";
         String role = roles.isEmpty() ? "" : roles.get(0);
 
-        if (userDetails instanceof CustomUserDetails) {
-            CustomUserDetails custom = (CustomUserDetails) userDetails;
+        // ✅ FIX S6201 (pattern moderne instanceof)
+        if (userDetails instanceof CustomUserDetails custom) {
             nom = custom.getNom();
             prenom = custom.getPrenom();
         }
@@ -47,9 +45,9 @@ public class JwtUtils {
         return Jwts.builder()
                 .setSubject(userDetails.getUsername())
                 .claim("roles", roles)
-                .claim("nom", nom)       // 👈 ajout
-                .claim("prenom", prenom) // 👈 ajout
-                .claim("role", role)     // 👈 ajout (ex: "ROLE_ADMIN")
+                .claim("nom", nom)
+                .claim("prenom", prenom)
+                .claim("role", role)
                 .setIssuedAt(new Date())
                 .setExpiration(new Date(System.currentTimeMillis() + jwtExpirationMs))
                 .signWith(getSigningKey(), SignatureAlgorithm.HS512)
